--- a/Shift_reg/main/CMakeLists.txt
+++ b/Shift_reg/main/CMakeLists.txt
@@ -1,2 +1,3 @@
-idf_component_register(SRCS "shift_reg.cpp" "main.cpp"
+idf_component_register(SRCS "main.cpp"
                     INCLUDE_DIRS ".")
+target_compile_options(${COMPONENT_LIB} PUBLIC -std=gnu++2a)
