-enh made program compatible with pcb

--- a/APPS_MAIN/main/CMakeLists.txt
+++ b/APPS_MAIN/main/CMakeLists.txt
@@ -1,3 +1,3 @@
-file(GLOB_RECURSE source_list ../ui/*.c)
+file(GLOB_RECURSE source_list ../ui_swap/*.c)
 idf_component_register(SRCS "hello_world_main.c" ${source_list}
-                    INCLUDE_DIRS "" "../ui")
+                    INCLUDE_DIRS "" "../ui_swap")
