--- a/APPS_MAIN/main/CMakeLists.txt
+++ b/APPS_MAIN/main/CMakeLists.txt
@@ -1,3 +1,2 @@
-file(GLOB_RECURSE source_list ../ui_swap/*.c)
 idf_component_register(SRCS "main.c" ${source_list}
-                    INCLUDE_DIRS "" "../ui_swap")
+                    INCLUDE_DIRS "")
