--- a/APPS_MAIN/components/module_driver/CMakeLists.txt
+++ b/APPS_MAIN/components/module_driver/CMakeLists.txt
@@ -1,5 +1,5 @@
 file(GLOB_RECURSE SOURCES src/*.c)
 
-idf_component_register(SRCS ${SOURCES}
-        INCLUDE_DIRS "include"
-        REQUIRES main TCA9534_IDF)
+idf_component_register(SRCS ${SOURCES} module_driver_helper.c
+        INCLUDE_DIRS "." "include"
+        REQUIRES main TCA9534_IDF led_strip)
