-enh split big ui.c files in to seperate header and source files

--- a/APPS_MAIN/components/gui/CMakeLists.txt
+++ b/APPS_MAIN/components/gui/CMakeLists.txt
@@ -1,5 +1,6 @@
 file(GLOB_RECURSE source_list ui_swap/*.c)
-idf_component_register(SRCS ${source_list} gui_helper.c
-                       INCLUDE_DIRS "." "ui_swap/"
+file(GLOB_RECURSE source_list_screens ui_swap/screens/*.c)
+idf_component_register(SRCS ${source_list} ${source_list_screens} gui_helper.c
+                       INCLUDE_DIRS "." "ui_swap/" "ui_swap/screens"
                        REQUIRES lvgl encoder_driver main)
                       
