-add skeleton for tens driver

--- a/APPS_MAIN/components/module_driver/CMakeLists.txt
+++ b/APPS_MAIN/components/module_driver/CMakeLists.txt
@@ -2,4 +2,4 @@ file(GLOB_RECURSE SOURCES src/*.c)
 
 idf_component_register(SRCS ${SOURCES} module_driver_helper.c
         INCLUDE_DIRS "." "include"
-        REQUIRES main TCA9534_IDF led_strip)
+        REQUIRES main TCA9534_IDF led_strip hal)
